--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Simple hamburger menu</title>
 </head>
 <body>
+    <div class="bg"></div>
     <header>
         <nav>
             <div class="img">
